- 初步实现了静态的卡片详情页 - 修改了登录和注册的接口 - todo ： 修改/重置 密码  卡片历史兑换记录以及其他已实现接口的修改

--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_all_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_all_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -15,10 +15,24 @@
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ToolbarTheme" />
 
+
+
     <android.support.v7.widget.RecyclerView
+        android:layout_below="@+id/toolbar_all_card"
         android:id="@+id/recyclerView_all_card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
 
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/floatingActionButton_all_card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+</RelativeLayout>
