-积分兑换与后台连接 -我的订单

--- a/APP/Android/PointsLeague/app/src/main/res/values/styles.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/styles.xml
@@ -16,4 +16,9 @@
         <item name="android:textColorPrimary">@android:color/white</item>
     </style>
 
+    <style name="TabStyle" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
