--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_history_exchange.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_history_exchange.xml
@@ -1,6 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</android.support.constraint.ConstraintLayout>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="80dp"
+    android:background="@drawable/rectangle"
+    android:layout_margin="5dp">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="30dp"
+        android:padding="10dp">
+        <TextView
+            android:id="@+id/textView_points_history_exchange_item"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="2000"
+            android:textSize="24sp"/>
+        <TextView
+            android:id="@+id/textView_date_history_exchange_item"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="2018-7-12"/>
+    </LinearLayout>
+    <FrameLayout
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        android:layout_marginEnd="30dp">
+        <TextView
+            android:id="@+id/textView_exchange_points_history_exchange_item"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1000"
+            android:textSize="24sp"/>
+    </FrameLayout>
+</RelativeLayout>
