--- a/APP/Android/PointsLeague/app/src/main/res/values/dimens.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="feedback_border_width">1dp</dimen>
     <dimen name="feedback_input_padding">5dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="fixed_height_bottom_padding">5dp</dimen>
 </resources>
