--- a/APP/Android/PointsLeague/app/src/main/res/values/colors.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorOrange">#FF8022</color>
+    <color name="colorLightOrange">#FFFF9546</color>
     <color name="colorUnable">#c3c3c3</color>
 </resources>
