- 完成首页布局适配，解决图片拉伸，完成未登录页面 - 动态加载历史兑换记录 - todo 0张卡片时显示添加卡片按钮，商户扫码app

--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_main.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent">
         <LinearLayout
             android:id="@+id/tb"
+            android:layout_above="@+id/bottom_navigation_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
