--- a/APP/Android/PointsLeague/app/src/main/res/layout/content_login_button_points.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/content_login_button_points.xml
@@ -3,17 +3,86 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="50dp">
+    android:paddingTop="50dp">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="登录"
+            android:textSize="20sp"/>
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <EditText
+            android:background="@drawable/edit_login"
+            android:id="@+id/editText_account_login"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:ems="14"
+            android:inputType="phone"
+            android:textAlignment="center"
+            android:textColorHint="#CECECE"
+            android:hint="请输入账户"/>
+
+        <EditText
+            android:background="@drawable/edit_login"
+            android:id="@+id/editText_password_login"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:ems="14"
+            android:inputType="textPassword"
+            android:textAlignment="center"
+            android:textColorHint="#CECECE"
+            android:hint="请输入密码"/>
+
+    </LinearLayout>
 
     <Button
+        android:layout_margin="5dp"
+        android:background="@drawable/login_button"
         android:layout_gravity="center"
         android:id="@+id/button_login_points"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="60dp"
-        android:paddingEnd="60dp"
-        android:textSize="24sp"
-        android:textColor="@color/colorWhite"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="登录" />
+        android:layout_width="250dp"
+        android:layout_height="50dp" />
+
+    <RelativeLayout
+        android:layout_margin="5dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content">
+        <View
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:background="#8B8B8B"
+            />
+        <TextView
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="注 册"
+            android:textColor="#8B8B8B"
+            android:textSize="15sp"
+            />
+        <View
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:background="#8B8B8B"
+            />
+    </RelativeLayout>
 </LinearLayout>
