--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_card_points.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_card_points.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         app:cardCornerRadius="20dp"
         app:cardElevation="5dp"
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/store_card"/>
+                android:src="@drawable/loading_card"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                         android:layout_height="wrap_content"
                         android:text="233"
                         android:textSize="18sp"
-                        android:textColor="@color/colorOrange"/>
+                        android:textColor="#FFDD22"/>
                 </LinearLayout>
             </RelativeLayout>
 
